<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fellow.calculator.CalculatorActivity"
    android:background="#000000">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="7"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculation"
            android:id="@+id/calculation"
            android:layout_columnSpan="4" />

        <EditText
            android:layout_width="match_parent"
            android:text="@string/result"
            android:id="@+id/result"
            android:layout_columnSpan="4"
            android:textColor="#ffffff"
            android:textSize="42sp"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="numberDecimal"
            android:gravity="center_vertical|end" />

        <Button
            style="@style/OperationButton"
            android:text="@string/clear"
            android:id="@+id/clear"
            android:onClick="onClickClear" />

        <Button
            style="@style/OperationButton"
            android:text="@string/negative"
            android:id="@+id/negative" />

        <Button
            style="@style/OperationButton"
            android:text="@string/percent"
            android:id="@+id/percent" />

        <Button
            style="@style/OperationButton"
            android:text="@string/divide"
            android:id="@+id/divide" />

        <Button
            style="@style/NumberButton"
            android:text="@string/seven"
            android:id="@+id/seven" />

        <Button
            style="@style/NumberButton"
            android:text="@string/eight"
            android:id="@+id/eight" />

        <Button
            style="@style/NumberButton"
            android:text="@string/nine"
            android:id="@+id/nine" />

        <Button
            style="@style/OperationButton"
            android:text="@string/multiply"
            android:id="@+id/multiply" />

        <Button
            style="@style/NumberButton"
            android:text="@string/four"
            android:id="@+id/four" />

        <Button
            style="@style/NumberButton"
            android:text="@string/five"
            android:id="@+id/five" />

        <Button
            style="@style/NumberButton"
            android:text="@string/six"
            android:id="@+id/six" />

        <Button
            style="@style/OperationButton"
            android:text="@string/minus"
            android:id="@+id/subtract" />

        <Button
            style="@style/NumberButton"
            android:text="@string/one"
            android:id="@+id/one" />

        <Button
            style="@style/NumberButton"
            android:text="@string/two"
            android:id="@+id/two" />

        <Button
            style="@style/NumberButton"
            android:text="@string/three"
            android:id="@+id/three" />

        <Button
            style="@style/OperationButton"
            android:text="@string/plus"
            android:id="@+id/add" />

        <Button
            style="@style/NumberButton"
            android:text="@string/zero"
            android:id="@+id/zero"
            android:layout_columnSpan="2"
            android:layout_gravity="fill" />

        <Button
            style="@style/NumberButton"
            android:text="@string/point"
            android:id="@+id/point" />

        <Button
            style="@style/EqualButton"
            android:text="@string/equal"
            android:id="@+id/equal" />
    </GridLayout>

</RelativeLayout>
